Corrected contrast in header.

--- a/_static/css/navbar.css
+++ b/_static/css/navbar.css
@@ -12,6 +12,15 @@
     border-right: 0;
     border-radius: 0;
     margin-bottom: 0;
+    color: #595959;
+}
+
+.navbar-default .navbar-brand {
+    color: #595959;
+}
+
+.navbar-default .navbar-nav>li>a {
+    color: #595959;
 }
 
 #sidebar {
